:wrench: Configura datasource properties
Configuração do datasource no arquivo .properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+#DataSource
+
+spring.datasource.url=jdbc:mysql://localhost/ranchoDoMiroDelivery?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=Gab_db_2020
+
+#JPA
+
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 
