--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>API responsável pelo delivery de restaurantes.</description>
 
 	<properties>
+		<lombok.version>1.18.12</lombok.version>
 		<java.version>1.8</java.version>
 		<mapstruct.version>1.3.1.Final</mapstruct.version>
 		<mapstruct.processor.version>1.3.1.Final</mapstruct.processor.version>
@@ -75,6 +76,11 @@
 					<source>${java.version}</source>
 					<target>${java.version}</target>
 					<annotationProcessorPaths>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>${lombok.version}</version>
+						</path>
 						<path>
 							<groupId>org.mapstruct</groupId>
 							<artifactId>mapstruct-processor</artifactId>
